devscripts (2.16.11) UNRELEASED; urgency=medium

  * debuild:
    + Avoid setting a hook to just "cd ..; ".

 -- James McCoy <jamessan@debian.org>  Wed, 30 Nov 2016 00:05:18 -0500

devscripts (2.16.10) unstable; urgency=medium

  [ Afif Elghraoui ]
  * debcommit:
    + Use standard version mangling for git tags. (Closes: #770187)

  [ Antonio Terceiro ]
  * debrepro:
    + document exit status in manpage

  [ James McCoy ]
  * debuild:
    + Fix mapping of debuild final-clean hook to dpkg-buildpackage's
      postclean.
    + Preserve SOURCE_DATE_EPOCH in the environment.
    + Require a '--' between debuild options and debian/rules target so we
      know where options end.  (Closes: #845566)
    + Adjust hook commands to account for dpkg-buildpackage running from a
      different directory than debuild used for the lintian, signing, and
      post-dpkg-buildpackage hooks.  (Closes: #845628)

 -- James McCoy <jamessan@debian.org>  Sat, 26 Nov 2016 13:21:58 -0500

devscripts (2.16.9) unstable; urgency=medium

  [ James McCoy ]
  * debsnap:
    + Fix "no binaries for given arch" detection so it doesn't download
      binaries for unspecified archs.  (Closes: #839533)
    + Add handling for the --version switch, as advertised by --help.
      (Closes: #839537)
  * bts:
    + Switch to Net::SMTPS to support STARTTLS.  Based on a patch by Andrew
      Shadura.  (Closes: #518622)
  * Refactor debuild to remove dpkg-buildpackage emulation and generally be a
    much thinner wrapper around dpkg-buildpackage.  (Closes: #789581)
    + Remove claim from man page that dpkg-buildpackage doesn't support hooks.
      (Closes: #765495)
    + Remove handling of all dpkg-buildpackage options that aren't directly
      used by debuild.
      - This fixes the issue where debuild didn't understand "-Jauto", as
        debuild now just passes it through.  (Closes: #826508)
    + Honor -a option regardless of which debuild mode is being used, since