@@ -11,6 +11,9 @@ for each Debian source directory encountered.  These directories are
 recognised by containing a debian/changelog file for a package whose
 name matches that of the directory.  Name matching is described below.
 .PP
+If \fBdebclean\fR is invoked from a directory that is already a Debian source
+package, it will not descend into its subdirectories.
+.PP
 Also, if the \fB\-\-cleandebs\fR option is given, then in every
 directory containing a Debian source tree, all files named *.deb,
 *.changes and *.build are removed.  The .dsc, .diff.gz and
